--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
+spring.servlet.multipart.max-file-size=2000KB
+spring.servlet.multipart.max-request-size=2000KB
+
