add lombok + storage configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=2000KB
 spring.servlet.multipart.max-request-size=2000KB
 
+integrated.upload.location=./upload/products-image
+
