--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,23 @@
 #spring.datasource.password=
 
 spring.datasource.url=jdbc:mysql://docker_db_1/mydb
+#spring.datasource.url=jdbc:mysql://104.215.183.81/mydb
 spring.datasource.username=root
 spring.datasource.password=091778@Project
 server.port=8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.datasource.hikari.max-lifetime=300000
+#spring.datasource.hikari.max-lifetime=300000
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.datasource.hikari.leak-detection-threshold=2000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=9
+spring.datasource.hikari.isolate-internal-queries=true
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=60000
 
 spring.servlet.multipart.max-file-size=2000KB
 spring.servlet.multipart.max-request-size=2000KB
