--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@
 #spring.datasource.username=sa
 #spring.datasource.password=
 
-spring.datasource.url=jdbc:mysql://docker_db_1/mydb
-#spring.datasource.url=jdbc:mysql://104.215.183.81/mydb
+#spring.datasource.url=jdbc:mysql://docker_db_1/mydb
+spring.datasource.url=jdbc:mysql://104.215.183.81/mydb
 spring.datasource.username=root
 spring.datasource.password=091778@Project
 server.port=8081
@@ -31,4 +31,5 @@ spring.servlet.multipart.max-file-size=2000KB
 spring.servlet.multipart.max-request-size=2000KB
 
 integrated.upload.location=./upload/products-image
-
+integrated.config.host= http://104.215.183.81:8082, http://localhost:8082
+integrated.config.method= GET, PUT , POST , DELETE , OPTION , HEAD
