--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 
 #spring.datasource.url=jdbc:mysql://docker_db_1/mydb
 spring.datasource.url=jdbc:mysql://104.215.183.81/mydb
-spring.datasource.username=root
+spring.datasource.username=user
 spring.datasource.password=091778@Project
 server.port=8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
