--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ spring.datasource.hikari.isolate-internal-queries=true
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=60000
 
-spring.servlet.multipart.max-file-size=2000KB
-spring.servlet.multipart.max-request-size=2000KB
+spring.servlet.multipart.max-file-size=8000KB
+spring.servlet.multipart.max-request-size=16000KB
 
 integrated.upload.location=./upload/products-image
 integrated.config.host= http://104.215.183.81:8082, http://localhost:8082
